media query fix portatit on mobile black background full width

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
-html,body,.container {
+body {
+	background-color: black;
+}
+
+html,body,.container-fluid {
 	height: 100%;
 }
 
@@ -9,3 +13,4 @@ html,body,.container {
 	flex-direction: column;
 	justify-content: center;
 }
+
